--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
 body {
     background-image:url("swirl_pattern.png") }
 
+header {
+    background-color:#e9e9e9;
+    font-family: CaviarDreams;
+    font-variant: small-caps; 
+    font-size: 18px;
+    
+}
+    
+li { display:inline;
+    text-decoration: none;
+    
+}
+
+a { color:gray;
+    
+}
+
 div {
     background-color: white; 
     width: 50%;
